@@ -399,6 +399,7 @@ because of Phabricator reports.
   the body tag and must be provided by skins.
 * The SkinTemplateOutputPageBeforeExec hook, deprecated since 1.35, was removed.
 * Article::getContentObject, deprecated since 1.32, was removed.
+* WikiImporter::debugRevisionHandler, unused and for debug only, was removed.
 * …
 
 === Deprecations in 1.37 ===
